fix: adjust padding for testimonials section on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -3838,7 +3838,7 @@ header .contact div {
 
 @media screen and (max-width: 1100px) {
   .prod-testimonials {
-    padding: 62px 16px 76px;
+    padding: 0 16px 76px 16px;
   }
 
   .tm-title {
